--- a/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/manage-single-surgery/manage-single-surgery.component.html
+++ b/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/manage-single-surgery/manage-single-surgery.component.html
@@ -4,21 +4,116 @@
     </h3>
 </div>
 <form [formGroup]="SurgeryFormGroup" dir="rtl">
-    <mat-form-field appearance="fill">
-        <mat-label>תאריך ניתוח</mat-label>
-        <input matInput [matDatepicker]="picker" formControlName="ArrivalDate">
-        <mat-hint>MM/DD/YYYY</mat-hint>
-        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-        <mat-label>שעת התחלה</mat-label>
-        <input matInput type="time" formControlName="ArrivalTime">
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-        <mat-label>שעת סיום</mat-label>
-        <input matInput type="time" formControlName="EndTime">
-    </mat-form-field>
+    <div class="row personal-details" formGroupName="SurgeryPatientDetails">
+        <div class="col-2">
+            <mat-form-field>
+                <mat-label>תעודת זהות</mat-label>
+                <input matInput formControlName="PM_PATIENT_ID">
+            </mat-form-field>
+        </div>
+        <div class="col-2">
+            <mat-form-field>
+                <mat-label>מספר מקרה</mat-label>
+                <input matInput formControlName="PM_CASE_NUMBER">
+            </mat-form-field>
+        </div>
+        <div class="col-2">
+            <mat-form-field>
+                <mat-label>שם פרטי</mat-label>
+                <input matInput formControlName="PM_FIRST_NAME">
+            </mat-form-field>
+        </div>
+        <div class="col-2">
+            <mat-form-field>
+                <mat-label>שם משפחה</mat-label>
+                <input matInput formControlName="PM_LAST_NAME">
+            </mat-form-field>
+        </div>
+        <div class="col-2">
+            <mat-form-field>
+                <mat-label>מגדר</mat-label>
+                <input matInput formControlName="PM_PATIENT_GENDER">
+            </mat-form-field>
+        </div>
+        <div class="col-2">
+            <mat-form-field>
+                <mat-label>גיל</mat-label>
+                <input matInput formControlName="PM_DOB">
+            </mat-form-field>
+        </div>
+        <div class="col-2">
+            <mat-form-field>
+                <mat-label>מחלקה</mat-label>
+                <input matInput formControlName="PM_MOVE_DEPART_SEODE">
+            </mat-form-field>
+        </div>
+    </div>
+    <hr>
+    <div class="row surgery-details">
+        <div class="col-3" formGroupName="SurgeryRequestDepartments">
+            <mat-form-field style="line-height: 30px;">
+                <mat-label>מחלקה מזמינה</mat-label>
+                <mat-select formControlName="SD_ROW_ID" (selectionChange)="selectedRequestedDepartment($event.value)">
+                    <mat-option *ngFor="let department of SurgeryDepartments" [value]="department.SD_ROW_ID">
+                        {{department.S_DEPARTMENT_NAME}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+        <div class="col-3">
+            <mat-form-field>
+                <mat-label>תאריך ניתוח</mat-label>
+                <div style="display: flex;">
+                    <input matInput [matDatepicker]="pickerSurgery" formControlName="ArrivalDate">
+                    <mat-datepicker-toggle matIconSuffix [for]="pickerSurgery"></mat-datepicker-toggle>
+                    <mat-datepicker #pickerSurgery></mat-datepicker>
+                </div>
+            </mat-form-field>
+        </div>
+        <div class="col-3">
+            <mat-form-field>
+                <mat-label>שעת התחלה</mat-label>
+                <input matInput type="time" formControlName="ArrivalTime">
+            </mat-form-field>
+        </div>
+        <div class="col-3">
+            <mat-form-field>
+                <mat-label>שעת סיום</mat-label>
+                <input matInput type="time" formControlName="EndTime">
+            </mat-form-field>
+        </div>
+    </div>
+    <div class="row surgery-details" formGroupName="SurgeryServicesName">
+        <div class="col-6">
+            <mat-form-field class="example-full-width" appearance="fill">
+                <mat-label>שם ניתוח</mat-label>
+                <input type="text" matInput [formControl]="surgeriesCtrl" [matAutocomplete]="auto2">
+                <mat-autocomplete #auto2="matAutocomplete" [displayWith]="displayFnSurgery">
+                    <mat-option *ngFor="let option of filteredOptionssurgeries | async" [value]="option">
+                        {{option.S_SERVICE_VAL}}
+                    </mat-option>
+                </mat-autocomplete>
+            </mat-form-field>
+        </div>
+        <div class="col-4">
+            <mat-form-field class="example-full-width" appearance="fill">
+                <mat-label>רופא מנתח</mat-label>
+                <input type="text" matInput [formControl]="surgeonCtrl" [matAutocomplete]="auto">
+                <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFnSurgeon">
+                    <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                        {{option.FirstName}} {{option.LastName}}
+                    </mat-option>
+                </mat-autocomplete>
+            </mat-form-field>
+        </div>
+        <div class="col-2">
+            <mat-form-field>
+                <mat-label>זמן משך ניתוח (דקות)</mat-label>
+                <input matInput formControlName="S_SERVICE_DURATION" type="number" step="1">
+            </mat-form-field>
+        </div>
+    </div>
+
     <div class="row-btn">
         <div class="example-button-container">
             <button mat-fab color="primary" (click)="saveSurgeyDetails()"
