--- a/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
+++ b/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
@@ -43,21 +43,19 @@
             </select>
             <div *ngIf="this.TimeLineParam == '5' && !deliveryPrematureGroup.get('ByDoctor').value">
                 <mat-label class="mr-2">מ-שנה</mat-label>
-                <select id="firstSelect" class="form-select"
-                    (change)="changePeriod($event);">
+                <select id="firstSelect" class="form-select" (change)="changePeriod($event);">
                     <option value="undefined">הכל</option>
                     <option *ngFor="let year of yearsPeriodList" [value]="year.number">{{year.year}}
                     </option>
                 </select>
                 <mat-label class="mr-2">עד-שנה</mat-label>
-                <select id="secondSelect" class="form-select"
-                    (change)="changePeriod($event);">
+                <select id="secondSelect" class="form-select" (change)="changePeriod($event);">
                     <option value="undefined">הכל</option>
                     <option *ngFor="let year of yearsPeriodList2" [value]="year.number">{{year.year}}
                     </option>
                 </select>
             </div>
-            
+
         </div>
         <div *ngIf="departParam == '1'" class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="text-align-last: center;">
             <div class="row" style="justify-content: center;" *ngIf="!tableView">
@@ -121,6 +119,17 @@
             [formGroup]="deliveryPrematureGroup">
             <div class="row">
                 <section class="example-section">
+                    <mat-checkbox class="example-margin" (change)="eshpozAmbolatoryFilters($event.source.value)" value="2">
+                        אמבולטורים</mat-checkbox>
+                </section>
+                <section class="example-section">
+                    <mat-checkbox class="example-margin" (change)="eshpozAmbolatoryFilters($event.source.value)" value="1">
+                        מאושפזים</mat-checkbox>
+                </section>
+            </div>
+            <hr>
+            <div class="row">
+                <section class="example-section">
                     <mat-checkbox class="example-margin" (change)="eshpozFilters($event.source.value)" value="1">
                         מרפאות</mat-checkbox>
                 </section>
@@ -128,7 +137,6 @@
                     <mat-checkbox class="example-margin" (change)="eshpozFilters($event.source.value)" value="2">
                         מכונים</mat-checkbox>
                 </section>
-
             </div>
             <div class="row">
                 <section class="example-section">
