--- a/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/surgeries-management.component.html
+++ b/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/surgeries-management.component.html
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="button-container">
-      <button mat-fab style="background-color: burlywood;" (click)="handleEvent('New', $event.event)"
+      <button mat-fab class="add-btn" (click)="handleEvent('New', $event.event)"
         aria-label="Example icon button with a delete icon">
         <mat-icon>add</mat-icon>
       </button>
