--- a/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/manage-single-surgery/manage-single-surgery.component.css
+++ b/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/manage-single-surgery/manage-single-surgery.component.css
@@ -1,50 +1,49 @@
+/* .container {
+  background: linear-gradient(93deg, rgb(247 242 164), rgb(250, 250, 250));
+  border-radius: 10px;
+} */
+
 .row-title {
-    width: 100%;
-    text-align: center;
+  width: 100%;
+  text-align: center;
 }
 
 .row-btn {
-    width: 100%;
-    /* justify-content: left; */
+  width: 100%;
+  /* justify-content: left; */
 }
 
-/* form {
+/* .row.personal-details {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-.row{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
 } */
-.row.personal-details {
-    display: flex;
-}
 
 .row.personal-details mat-form-field {
-    /* width: 10%; */
-    line-height: 40px;
-    margin-left: auto;
+  /* width: 10%; */
+  line-height: 40px;
+  margin-left: auto;
 }
 
 .row.surgery-details mat-form-field {
-    /* width: 30%; */
-    line-height: 40px;
-    margin-left: auto;
+  /* width: 30%; */
+  line-height: 16px;
+  margin-left: auto;
 }
+
 .example-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
-  }
-  
-  .example-full-width {
-    width: 100%;
-  }
-  h2, ul{
-    color: red;
-  }
-  .exists-info{
-    float: right;
-  }
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.example-full-width {
+  width: 100%;
+}
+
+h2,
+ul {
+  color: red;
+}
+
+.exists-info {
+  float: right;
+}
