--- a/src/app/surgery-calendar/surgery-rooms-menu/surgery-rooms-menu.component.css
+++ b/src/app/surgery-calendar/surgery-rooms-menu/surgery-rooms-menu.component.css
@@ -4,9 +4,14 @@
 .card{
     align-items: center;
     padding: 50px;
+    box-shadow: 0px 4px 10px 1px;
     margin: 16px;
 }
 .card:hover{
-    background: aliceblue;
+    background: linear-gradient(200deg, rgb(237 230 129), rgb(250, 250, 250));
     cursor: pointer;
+    transform: rotate(6deg);
+}
+span{
+    margin: 60px;
 }
