--- a/src/app/dev-manage/dev-manage.component.html
+++ b/src/app/dev-manage/dev-manage.component.html
@@ -184,7 +184,7 @@
                 <div class="row">
                     <div class="col-6">
                         <a target="_blank"
-                            href="https://auth0.openai.com/u/signup/identifier?state=hKFo2SBQWm5lSTlFMk5HR0VCSGRuYjJuRnlIVmVkNDlEUnhlR6Fur3VuaXZlcnNhbC1sb2dpbqN0aWTZIHR1RGw1VExqRnFsbkxrS3F1ZXpselhmSW9FaXYtVS1ho2NpZNkgRFJpdnNubTJNdTQyVDNLT3BxZHR3QjNOWXZpSFl6d0Q">להשיג
+                            href="https://platform.openai.com/account/api-keys">להשיג
                             טוקין</a>
                         <div class="form-group">
                             <mat-form-field>
