--- a/src/app/dev-manage/dev-manage.component.html
+++ b/src/app/dev-manage/dev-manage.component.html
@@ -183,8 +183,7 @@
                 <h2>chatGpt</h2>
                 <div class="row">
                     <div class="col-6">
-                        <a target="_blank"
-                            href="https://platform.openai.com/account/api-keys">להשיג
+                        <a target="_blank" href="https://platform.openai.com/account/api-keys">להשיג
                             טוקין</a>
                         <div class="form-group">
                             <mat-form-field>
@@ -201,13 +200,13 @@
                                 <mat-label>בחר מודל</mat-label>
                                 <mat-select [(ngModel)]="modelSelection" [ngModelOptions]="{standalone: true}">
                                     <mat-option value="completions">
-                                        completions
+                                        צ'אט
                                     </mat-option>
                                     <mat-option value="moderations">
-                                        moderations
+                                        מדד אלימות
                                     </mat-option>
                                     <mat-option value="images/generations">
-                                        images/generations
+                                        ייצור תמונות
                                     </mat-option>
                                 </mat-select>
                             </mat-form-field>
