--- a/src/app/surgery-calendar/surgery-calendar.component.html
+++ b/src/app/surgery-calendar/surgery-calendar.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid pb-5" dir="rtl">
+<div class="container-fluid" style="padding: 0px 80px 60px 80px;" dir="rtl">
     <div class="row text-center">
         <div class="col-md-4">
             <div class="btn-group">
