--- a/src/app/consultations/follow-up/follow-up.component.html
+++ b/src/app/consultations/follow-up/follow-up.component.html
@@ -162,17 +162,17 @@
                                         {{ element.Row_Id }}
                                     </td>
                                 </ng-container>
-                                <ng-container matColumnDef="FollowUpDepartSeode">
+                                <!-- <ng-container matColumnDef="FollowUpDepartSeode">
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header>
                                         מחלקה סיעודית
                                     </th>
                                     <td mat-cell *matCellDef="let element">
                                         {{ element.FollowUpDepartSeode }}
                                     </td>
-                                </ng-container>
+                                </ng-container> -->
                                 <ng-container matColumnDef="FollowUpDepart">
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                                        מחלקה רפואית
+                                        מחלקה
                                     </th>
                                     <td mat-cell *matCellDef="let element">
                                         {{ element.FollowUpDepart }}
@@ -186,14 +186,14 @@
                                         {{ element.FollowUpDate }}
                                     </td>
                                 </ng-container>
-                                <ng-container matColumnDef="FollowUpGroup">
+                                <!-- <ng-container matColumnDef="FollowUpGroup">
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header>
                                         קבוצה
                                     </th>
                                     <td mat-cell *matCellDef="let element">
                                         {{ element.FollowUpGroup }}
                                     </td>
-                                </ng-container>
+                                </ng-container> -->
                                 <ng-container matColumnDef="FollowUpCategory">
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header>
                                         קטגוריה
@@ -218,7 +218,7 @@
                                         {{ element.User.UserFirstName }} {{ element.User.UserLastName }}
                                     </td>
                                 </ng-container>
-                                <ng-container matColumnDef="UserDepart">
+                                <!-- <ng-container matColumnDef="UserDepart">
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header>
                                         מחלקה
                                     </th>
@@ -233,7 +233,7 @@
                                     <td mat-cell *matCellDef="let element">
                                         {{ element.User.WorkerType }}
                                     </td>
-                                </ng-container>
+                                </ng-container> -->
                                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                                 <tr mat-row *matRowDef="
                                         let row;
