--- a/src/app/surgery-calendar/surgery-rooms-menu/surgery-rooms-menu.component.css
+++ b/src/app/surgery-calendar/surgery-rooms-menu/surgery-rooms-menu.component.css
@@ -1,17 +1,44 @@
-.row{
+.row {
     justify-content: center;
 }
-.card{
+
+.card {
     align-items: center;
     padding: 50px;
     box-shadow: 0px 4px 10px 1px;
     margin: 16px;
+    height: 224px;
 }
-.card:hover{
+
+.card:hover {
     background: linear-gradient(200deg, rgb(237 230 129), rgb(250, 250, 250));
     cursor: pointer;
-    transform: rotate(6deg);
+    overflow: hidden;
+    height: 100%;
+    /* transform: rotate(6deg); */
 }
-span{
+
+span {
     margin: 60px;
+}
+
+b {
+    border-style: ridge;
+    padding: 4px 8px 0px 8px;
+    border-radius: 8%;
+    margin-bottom: 10px;
+}
+
+p {
+    margin: 8px 12px 1px 12px;
+    font-weight: lighter;
+}
+
+.row.area {
+    justify-content: center;
+    display: flex;
+}
+
+mat-label{
+    font-weight: bold;
 }
