--- a/src/app/surgery-calendar/surgery-rooms-menu/surgery-rooms-menu.component.html
+++ b/src/app/surgery-calendar/surgery-rooms-menu/surgery-rooms-menu.component.html
@@ -1,7 +1,3 @@
-<!-- <mat-grid-list cols="4" rowHeight="4:1">
-    <mat-grid-tile *ngFor="let room of surgeryRooms">{{room.RoomGroupDesc}} {{room.SurgeryRoomDesc}}</mat-grid-tile>
-</mat-grid-list> -->
-
 <div class="container" dir="rtl">
     <button mat-icon-button color="warn" aria-label="Example icon button with a close icon" mat-dialog-close
         style="float: right;">
@@ -11,14 +7,39 @@
         <h4><span>יום {{todaysName}}</span><span>{{data.event.day.date | date: 'dd-MM-yyyy'}}</span></h4>
     </div>
     <hr>
-    <div class="row">
+    <div class="row area">
+        <mat-label>פיזי</mat-label>
         <div class="card text-center" *ngFor="let room of surgeryRooms" (click)="openSurgeryRoomSchedule(room);">
-            <b> <u> {{room.RoomGroupDesc}} {{room.SurgeryRoomDesc}} </u> </b>
-            <br>
-            <b> {{room.S_DEPARTMENT_NAME}} </b>
-            <br>
-            מספר ניתוחים:
-            <b>{{room.NumberOfSurgeries}}</b>
+            <div *ngIf="room.SurgeryRooms.length > 0">
+                <u> {{room.title}} </u>
+                <br>
+                <div *ngFor="let s_room of physicalSurgeryRooms">
+                    <b><span>{{s_room.SurgeryRoom}} <p> ניתוחים:
+                                {{s_room.NumberOfSurgeries}}</p></span></b>
+                    <!-- <b> {{room.S_DEPARTMENT_NAME}} </b> -->
+                    <!-- <br>
+                מספר ניתוחים:
+                <b>{{room.NumberOfSurgeries}}</b> -->
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="row area">
+        <mat-label>וירטואלי</mat-label>
+        <div class="card text-center" *ngFor="let room of surgeryRooms" (click)="openSurgeryRoomSchedule(room);">
+            <div *ngIf="room.SurgeryRooms.length > 0">
+                <u> {{room.title}} </u>
+                <br>
+                <div *ngFor="let s_room of virtualSurgeryRooms">
+                    <b><span>{{s_room.SurgeryRoom}} <p> ניתוחים:
+                                {{s_room.NumberOfSurgeries}}</p></span></b>
+                    <!-- <b> {{room.S_DEPARTMENT_NAME}} </b> -->
+                    <!-- <br>
+                מספר ניתוחים:
+                <b>{{room.NumberOfSurgeries}}</b> -->
+                </div>
+            </div>
         </div>
     </div>
 </div>
