--- a/src/app/surgery-calendar/surgery-rooms-menu/surgery-rooms-menu.component.css
+++ b/src/app/surgery-calendar/surgery-rooms-menu/surgery-rooms-menu.component.css
@@ -4,17 +4,17 @@
 
 .card {
     align-items: center;
-    padding: 50px;
+    padding: 28px;
     box-shadow: 0px 4px 10px 1px;
     margin: 16px;
-    height: 224px;
+    /* height: 224px; */
 }
 
 .card:hover {
     background: linear-gradient(200deg, rgb(237 230 129), rgb(250, 250, 250));
     cursor: pointer;
-    overflow: hidden;
-    height: 100%;
+    /* overflow: hidden;
+    height: 100%; */
     /* transform: rotate(6deg); */
 }
 
