--- a/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/surgeries-management.component.css
+++ b/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/surgeries-management.component.css
@@ -10,3 +10,8 @@
 .add-btn:hover {
     transform: scale(1.2);
 }
+.rooms-list{
+    display: flex;
+    margin: auto;
+    list-style-type: none;
+}
