--- a/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/surgeries-management.component.html
+++ b/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/surgeries-management.component.html
@@ -21,7 +21,8 @@
       </div>
     </div>
     <div class="col-md-4">
-      <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'he' }}</h3>
+      <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'he' }} <span
+          *ngIf="events.length > 0">({{events[0]['SurgeryRoom']}})</span></h3>
     </div>
     <div class="col-md-4">
       <div class="btn btn-primary" style="border-radius: 5px;margin: 1px" (click)="setView(CalendarView.Week)"
@@ -41,7 +42,14 @@
     </div>
   </div>
   <br />
-
+  <div class="row">
+    <ul class="rooms-list">
+      <li *ngFor="let room of specificRooms">
+        <button mat-stroked-button color="primary"
+          (click)="getPatientsQueues(viewDate, room.SurgeryRoom)">{{room.SurgeryRoom}}</button>
+      </li>
+    </ul>
+  </div>
   <div [ngSwitch]="view">
     <mwl-calendar-day-view *ngSwitchCase="CalendarView.Day" [viewDate]="viewDate" [events]="events" [locale]="locale"
       [refresh]="refresh" (eventClicked)="handleEvent('Edit', $event.event)"
