--- a/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/surgeries-management.component.html
+++ b/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/surgeries-management.component.html
@@ -34,12 +34,12 @@
         יום
       </div>
     </div>
-    <div class="button-container">
+    <!-- <div class="button-container">
       <button mat-fab class="add-btn" (click)="handleEvent('New', $event.event)"
         aria-label="Example icon button with a delete icon">
         <mat-icon>add</mat-icon>
       </button>
-    </div>
+    </div> -->
   </div>
   <br />
   <div class="row">
